feat: Filter vehicles
