# app/Http/Controllers/MileageTrackerController.php
@@ -79,7 +79,7 @@ class MileageTrackerController extends Controller
      *         @OA\Schema(type="integer", format="int64", example=20)
      *     ),
      *     @OA\Parameter(
-     *         name="serial-no",
+     *         name="serialNo",
      *         in="query",
      *         required=false,
      *         @OA\Schema(type="string", example="ss4er-sfsdf")
