# app/Http/Requests/Vehicle/PaginatedVehicleRequest.php
@@ -32,7 +32,9 @@ class PaginatedVehicleRequest extends FormRequest
     {
         return [
             'limit' => ['required', 'integer', 'min:1'],
-            'page' => ['required', 'integer', 'min:1']
+            'page' => ['required', 'integer', 'min:1'],
+            'vehicleNo' => ['nullable', 'max: 255'],
+            'chassisNo' => ['nullable', 'max: 255']
         ];
     }
 
